# SpleeterRT

./: .gitignore  CMakeLists.txt  README.MD  Spleeter4Stems.jucer
Executable/: CMakeLists.txt  SpleeterRT.vcxproj  SpleeterRT.vcxproj.filters  main.c
Executable/SpleeterRT.xcodeproj/: project.pbxproj
Executable/SpleeterRT.xcodeproj/project.xcworkspace/xcuserdata/zendev.xcuserdatad/: UserInterfaceState.xcuserstate
Executable/SpleeterRT.xcodeproj/xcuserdata/zendev.xcuserdatad/xcschemes/: xcschememanagement.plist
PlugIns/: CMakeLists.txt
PlugIns/Source/: Spleeter4Stems.c
VST/Source/: PluginProcessor.cpp
